Fixed z-index on all elements on home page

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,6 @@ nav {
 }
 
 .home-banner {
-  z-index: 1;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -105,6 +104,7 @@ nav {
   font-weight: bold;
   font-size: 5em;
   color: var(--light-primary-color);
+  z-index: 0;
   margin: 0;
 }
 
@@ -122,6 +122,7 @@ nav {
   font-size: 3em;
   white-space: nowrap;
   overflow: hidden;
+  z-index: 0;
   margin: 0 auto;
 }
 
@@ -136,6 +137,7 @@ nav {
   justify-content: center;
   align-items: center;
   gap: 0 30px;
+  z-index: 2;
   margin-top: 5em;
 }
 
@@ -176,7 +178,7 @@ nav {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 1;
   background-image: url("");
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -189,17 +191,21 @@ main {
 }
 
 .footer {
-  z-index: 1;
   text-align: center;
   margin-bottom: 3em;
 }
 
 .footer-buttons {
+  position: relative;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   list-style: none;
   padding: 0;
+}
+
+.footer-buttons li {
+  z-index: 2;
 }
 
 .footer-buttons img {
